--- a/src/main/resources/web/js/i18n/menu/fr.json
+++ b/src/main/resources/web/js/i18n/menu/fr.json
@@ -1,20 +1,41 @@
 {
-  "leftMenu": {
-    "mainTitle": "Menu",
-    "dashboard": "Home",
-    "effective": "Effectif",
-    "groups": "Groupes",
-    "player": "Joueur",
-    "training": "Entraînements",
-    "calendar" : "Agenda",
-    "championship" : "Compétition",
-    "composition" : "Composition d'équipe",
-    "collectPreparation" :"Préparation de la collecte",
-    "matchPreparation" : "Préparation match",
-    "matchEnding" : "Bilan du match",
-    "stats" : "Statistiques",
-    "optimize" : "Optimiser",
-    "profile" : "Profile",
-    "param" : "Paramétrage"
-  }
+    "headerMenu": {
+        "mainTitle": "Menu",
+        "dashboard": "Accueil",
+        "effective": "Effectif",
+        "groups": "Groupes",
+        "player": "Joueur",
+        "training": "Entraînements",
+        "calendar" : "Agenda",
+        "championship" : "Compétition",
+        "composition" : "Composition d'équipe",
+        "collectPreparation" :"Préparation de la collecte",
+        "matchPreparation" : "Préparation match",
+        "matchEnding" : "Bilan du match",
+        "stats" : "Statistiques",
+        "optimize" : "Optimiser",
+        "profile" : "Profile",
+        "param" : "Paramétrage"
+  },
+    "navbar": {
+        "welcome": "Bienvenue",
+        "connect": "Connexion",
+        "disconnect": "Déconnexion",
+        "administration": "Administration",
+        "signup": "S'inscrire",
+        "param" : "Paramétrage"
+  },
+    "content": {
+        "login": {
+            "label": {
+                "login": "Login",
+                "password": "Mot de passe",
+                "signin": "Se connecter",
+                "forgotpasswd": "Mot de passe oublié?",
+                "forgotpasswdmess": "Ce sont des choses qui arrivent, donnez-nous votre identifiant de connexion, nous le réinitialiserons pour vous!",
+                "title": "Connectez vous sur <b>Qaobee</b>",
+                "forgotpasswdcancel": "Attendez, je m'en rappelle à présent!"
+            }
+        }
+    }
 }
