--- a/src/main/resources/web/js/i18n/menu/en.json
+++ b/src/main/resources/web/js/i18n/menu/en.json
@@ -1,21 +1,15 @@
 {
     "headerMenu": {
-        "mainTitle": "Menu",
         "dashboard": "Home",
-        "effective": "Effective",
-        "groups": "Groups",
-        "player": "Player",
-        "training": "Workout",
-        "calendar" : "Events",
-        "championship" : "Championship",
-        "composition" : "Team composition",
-        "collectPreparation" :"Gathering preparation",
-        "matchPreparation" : "Match preparation",
-        "matchEnding" : "Match appraisal",
         "stats" : "Statistics",
-        "optimize" : "Optimize",
-        "profile" : "Profile",
-        "param" : "Settings"
+        "effective": "Effective",
+        "training": "Training",
+        "championship" : "Competition",
+        "calendar" : "Agenda",
+        "notification" : "Messages",
+        "search" : "Search",
+        "search-event" : "Event",
+        "search-player" : "Player"
     },
     "navbar": {
         "welcome": "Welcome",
@@ -35,10 +29,6 @@
                 "forgotpasswdmess": "These are things that happen, give us your login and we will reset it for you!",
                 "title": "Log on to <b>Qaobee</b>",
                 "forgotpasswdcancel": "Wait, I remember now!"
-            },
-            "ph": {
-                "login": "Login",
-                "password": "Password"
             }
         }
     }    
