Structure Dashboard OK

--- a/src/main/resources/web/js/i18n/main/fr.json
+++ b/src/main/resources/web/js/i18n/main/fr.json
@@ -1,9 +1,12 @@
 {
-  "prive" : {
-    "dashboard" : {
-      "title" : "Mon espace"
-    }
-  },
+    "prive" : {
+        "dashboard" : {
+            "event" : "Prochain événement",
+            "stats" : "Statistiques événement",
+            "player" : "Statistiques joueur",
+            "topplayer" : "Top 3"
+        }   
+    },
   "footer": {
     "link": {
       "about": "A propos",
