--- a/src/main/resources/web/js/i18n/main/en.json
+++ b/src/main/resources/web/js/i18n/main/en.json
@@ -1,9 +1,12 @@
 {
-  "prive" : {
-    "dashboard" : {
-      "title" : "My space"
-    }
-  },
+    "prive" : {
+        "dashboard" : {
+            "event" : "Next event",
+            "stats" : "Statistics event",
+            "player" : "Statistics player",
+            "topplayer" : "Top 3"
+        }
+    },
   "footer": {
     "link": {
       "about": "About",
