--- a/src/app/i18n/landing/fr.json
+++ b/src/app/i18n/landing/fr.json
@@ -1,5 +1,7 @@
 {
   "landing": {
+    "main-title" : "Collect everything",
+    "sub-title" : "The first sports data collection tool in real life",
     "screen0": {
       "maintitle": "Entraînez plus intensément",
       "subtitle": "Espace de travail en ligne conçu pour et par les entraîneurs sportifs du monde entier."
