--- a/src/app/i18n/landing/fr.json
+++ b/src/app/i18n/landing/fr.json
@@ -17,7 +17,7 @@
       }
     },
     "area-2" : {
-      "title" : "Améliorez vos performances",
+      "title" : "Améliorez vos performances.",
       "content" : "Qaobee facilite l'acquisition et l'analyse des statistiques sportives."
     },
     "area-3" : {
