Menage suppression dossier Main

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -1,6 +1,10 @@
 {
     "main": {
-        "title": "Effective"
+        "title": "Effective",
+        "buttons" : {
+            "addEffective": "Add effective",
+            "addPlayer": "Add player"
+        }
     },
     "group": {
         "dashboard": {
