--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -26,6 +26,8 @@
         "validate": "Valider",
         "cancel": "Annuler",
         "close" : "Fermer",
-        "back" : "Retour"
+        "back" : "Retour",
+        "next" : "Suivant",
+        "previous" : "Précédent"
     }
 }
