--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -17,7 +17,36 @@
     },
     
     "addPlayer": {
-        "title": "Add a person"
+        "title": "Add a person",
+        "labelsfield": {
+            "playerCivilSection": "Vital sheet",
+            "playerAvatar": "Avatar" ,
+            "playerName": "Name" ,
+            "playerFirstname": "Firstname",
+            "playerGender": "Gender" ,,
+            "playerGenderM": "Male" ,
+            "playerGenderF": "Female" ,
+            "playerBirthdate": "Birthdate" ,
+            "playerBirthCity": "BirthCity" ,
+            "playerNationality": "Nationality" ,
+            
+            "playerCaracterSection": "Player characteristics",
+            "playerPositionType": "Position" ,
+            "playerWeight": "Weight (lb)",
+            "playerHeight": "Height (in)",
+            "playerLaterality": "Laterality",
+            "playerLateralityL": "Left-handed",
+            "playerLateralityR": "Right-handed",
+            "playerLateralityA": "Ambidextrous",
+            "playerSquadNumber": "Squad number",
+            
+            "playerContactSection": "Contact",
+            "playerPhoneNumber": "Phone number",
+            "playerTelMobile": "Mobile",
+            "playerTelHome": "Home",
+            "playerAddress": "Address",
+            "playerMail": "E-mail"
+        }
     },
     "updatePlayer": {
         "title": "Update player"
