--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -46,7 +46,8 @@
             "playerTelHome": "Home",
             "playerAddress": "Address",
             "playerMail": "E-mail"
-        }
+        },
+        "toastSuccess":"{{firstname}} {{name}} was added to the effective"
     },
     "updatePlayer": {
         "title": "Update player"
