--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -46,7 +46,8 @@
             "playerTelHome": "Maison",
             "playerAddress": "Adresse",
             "playerMail": "Email"
-        }
+        },
+        "toastSuccess":"{{firstname}} {{name}} a été ajouté à l'effectif"
     },
     "updatePlayer": {
         "title": "Modification du joueur"
