--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -1,33 +1,40 @@
 {
-    "date": {
-      "format": "DD/MM/YYYY",
-      "label": "jj/mm/aaaa"
-    },
-    "phone": {
-        "format": "99-99-99-99-99"
-    },
-    "footer": {
-        "link": {
-          "about": "A propos",
-          "contact": "Nous contacter",
-          "legalmentions": "Mentions légales"
+    "commons": {
+        "format": {
+            "weight": "kg",
+            "height": "cm",
+            "ageYear": "ans",
+            "date": {
+              "pattern": "DD/MM/YYYY",
+              "label": "jj/mm/aaaa"
+            },
+            "phone": {
+                "pattern": "99-99-99-99-99"
+            }
+        },
+        "footer": {
+            "link": {
+                "about": "A propos",
+                "contact": "Nous contacter",
+                "legalmentions": "Mentions légales"
+            }
+        },
+        "popup": {
+            "warning": {
+                "unregistreduser": "Vous n'avez pas validé votre e-mail."
+            }
+        },
+        "toolBar": {
+            "share": "Partager",
+            "pdfExport": "Exporter en PDF"
+        },
+        "buttons": {
+            "validate": "Valider",
+            "cancel": "Annuler",
+            "close" : "Fermer",
+            "back" : "Retour",
+            "next" : "Suivant",
+            "previous" : "Précédent"
         }
-    },
-    "popup": {
-        "warning": {
-            "unregistreduser": "Vous n'avez pas validé votre e-mail."
-        }
-    },
-    "toolBar": {
-        "share": "Partager",
-        "pdfExport": "Exporter en PDF"
-    },
-    "buttons": {
-        "validate": "Valider",
-        "cancel": "Annuler",
-        "close" : "Fermer",
-        "back" : "Retour",
-        "next" : "Suivant",
-        "previous" : "Précédent"
     }
 }
