--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -20,7 +20,9 @@
     "effectiveLabels": {
         "effectiveCategoryAge": "Categorie d'âge",
         "effectiveMembers": "Liste des joueurs",
-        "effectivePlaceHolderMembers": "Ajouter un joueur"
+        "effectiveTeams": "Liste des équipes",
+        "effectivePlaceHolderMembers": "Ajouter un joueur",
+        "effectiveLabel": "Libellé"
     },
     
     
